unpackaged/main/default/objects/Newstar_Log_Record__c/Newstar_Log_Record__c.object-meta.xml
<CustomObject>
    <label>NEWSTAR Log Record</label>
    <nameField>
        <displayFormat>LG{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEWSTAR Log Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>