unpackaged/main/default/objects/Newstar_Log_Record__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
        <fullName>Correlation_ID__c</fullName>
        <label>Correlation ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>