unpackaged/main/default/objects/Newstar_Log_Record__c/fields/Event_Context__c.field-meta.xml
<CustomField>
        <fullName>Event_Context__c</fullName>
        <label>Event Context</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>