unpackaged/main/default/objects/Newstar_Log_Record__c/fields/Event_Date__c.field-meta.xml
<CustomField>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </CustomField>