unpackaged/main/default/objects/Newstar_Log_Record__c/fields/Event_Type__c.field-meta.xml
<CustomField>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>