unpackaged/main/default/objects/Newstar_Log_Record__c/fields/Trace_Info__c.field-meta.xml
<CustomField>
        <fullName>Trace_Info__c</fullName>
        <label>Trace Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>