unpackaged/main/default/objects/Newstar_Log_Record__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>