unpackaged/main/default/objects/Newstar_Log_Record__c/listViews/Failures.listView-meta.xml
<ListView>
        <fullName>Failures</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failures</label>
    </ListView>