unpackaged/main/default/objects/Newstar_Log_Record__c/listViews/Last_24_hours.listView-meta.xml
<ListView>
        <fullName>Last_24_hours</fullName>
        <columns>NAME</columns>
        <columns>Correlation_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Context__c</columns>
        <columns>Primary_Object_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Last 24 hours</label>
    </ListView>